fix: restore visibility of module/class indices in Python API docs

--- a/docs/css/pydoctor.css
+++ b/docs/css/pydoctor.css
@@ -387,8 +387,17 @@ div.tip, div.hint, div.important {
 
 /* igraph-specific customizations follow from here */
 
-.pydoctor-navbar {
-	display: none;
+.pydoctor-navbar #search-box-container {
+	display: none !important;
+}
+.pydoctor-navbar .navlinks {
+    text-align: right;
+}
+.pydoctor-navbar .navlinks a {
+    margin-left: 0.5em;
+}
+.pydoctor-navbar .navbar-brand {
+    display: none !important;
 }
 
 table.fieldTable tr td {
